# PolyMarketBOT

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/: copilot-instructions.md
api/: claude.js  resolve.js  wallet.js
docs/: DEPLOY_AUTONOMOUS_BOT.md  FRONTEND_ANALYSIS_REPORT.md  POLYMARKET_GUIA_COMPLETA.txt
docs/plans/: 2026-02-23-refactor-backend-first-design.md
server/: index.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/trading/: claude.rs  engine.rs  mod.rs  models.rs  polymarket.rs
src/components/: AIPanel.tsx  ActivityLog.tsx  BalanceChart.tsx  ConsolePanel.tsx  Header.tsx  LanguageSelector.tsx  MarketsPanel.tsx  OrdersPanel.tsx  SettingsPanel.tsx  StatsPanel.tsx  TopCards.tsx
src/i18n/: LanguageContext.tsx  en.ts  es.ts  index.ts  types.ts
src/services/: aiProviders.ts  aiService.ts  claudeAI.ts  clobAuth.ts  database.ts  db.ts  edgeFunctions.ts  kellyStrategy.ts  marketConstants.ts  paperTrading.ts  polymarket.ts  smartTrader.ts  testApiKey.ts  wallet.ts
src/test/: paperTrading.test.ts
src/types/: index.ts
src/utils/: format.ts  translate.ts
supabase/: _run_migration.cjs  add-columns.mjs  config.toml  migration.sql  run-migration.mjs  test-connection.mjs
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260214_setup_cron_resolver.sql  20260215_fix_cron_auth.sql  20260224_fix_bot_kv_rls.sql  20260226_smart_trader_daily_cron.sql  (+3 more)
(+13 files in other folders)
